<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMatNo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMatNo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01003804-00004"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBatch"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBatch"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="REAFW18N"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDesc"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="COLOR: A315-ECHO BLUE F10 -R"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/txtHU"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHUID"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="011000000000000549"
            android:textSize="18sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/txtRollNo"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvRollNo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2XX"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDyeLot"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDyeLot"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C0005"
            android:textSize="18sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtFabTon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFabTon"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CCC"
            android:textSize="18sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtAvailQty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAvailQty"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20.00"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtOuterPkg"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHLHUID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2000000008"
            android:textSize="18sp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtHLHUID"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvHLHUID1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TR0005"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBinLb"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBin"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="B004L3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvStorAreaCdLb"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtStorAreaCd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStorAreaCd"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FABRIC"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
