<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCTrans"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/txtTrans"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvtransNo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCTyp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/txtTyp"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvtransTyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCRemarks"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/txtRemarks"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRemarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCCreatedby"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/txtCreatedBy"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreatedby"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCCreatedDt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtCreatedDt"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCreatedDt"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>

