<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPONo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDPONo"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7100003571"
            android:textSize="18sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtBatch"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDBatch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TRBFW14N"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDyeLot"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVendorLot"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DYL001X"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPkgNo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDPkgNo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9XX"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtQty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDDlvQty"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingRight="3dp"
            android:text="4300.00"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvIDUOM"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PC"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtMatNo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDMatNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="15000517-00097"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>