<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/txtVendor"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etIDVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="false"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtVenRef"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDVendorRef"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtDocDt"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDDocDt"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtRcvPlant"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDRcvPlant"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtRcvSloc"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDRcvSLoc"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtContNo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDCont"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:text="@string/txtVessel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIDVessel"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btIDRcvHU"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/txtRcvHU" />

        <Button
            android:id="@+id/btIDPost"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/txtPostGR" />

    </LinearLayout>

</LinearLayout>