<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPONoItm"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDPONo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7100003571-32"
            android:textSize="18sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/txtBatch"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDBatch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TRBFW14N"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtPOQty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDPOQty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingRight="3dp"
            android:text="4300.00"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvIDPOUOM"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PC"
            android:textSize="18sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDlvQty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDDlvQty"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingRight="3dp"
            android:text="4300.00"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvIDUOM"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PC"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/txtMatNo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIDMatNo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="15000517-00097"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>